fix: overflow 콘텐츠 숨김

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -170,6 +170,7 @@
   position: relative;
   height: 790px;
   width: 100%;
+  overflow: hidden;
 }
 
 .dimmed-layer {
